<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_event"
            android:title="@string/event_creation" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_account"
                android:title="@string/account" />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
