<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.eventorganisator.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_event"
        android:name="com.example.eventorganisator.ui.gallery.GalleryFragment"
        android:label="@string/event_creation"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.eventorganisator.ui.send.SendFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_send" />
</navigation>